style.css
html {
  background: linear-gradient(180deg, darkturquoise, wheat);
  min-height: 100%;
  font-family: Joan, serif;
}

h1 {
  text-align: left;
  padding-left: 0.4em;
  font-family: Lato, sans-serif;
  font-size: 4vw;
  font-weight: 900;
  font-style: italic;
  color: white;
  text-shadow: 0.3vw 0.3vw 0.3vw darkviolet;
  text-transform: uppercase;
  letter-spacing: 30px;
  word-spacing: 40px;
}

h2 {
  text-align: left;
  margin-left: 1em;
  font-family: Lato, sans-serif;
  font-size: 2em;
  font-style: italic;
  color: white;
  text-shadow: 3px 3px 2px darkviolet;
  letter-spacing: 3px;
}

.container {
  display: flex;
  flex-wrap: wrap;
  max-width: calc(900px + 270px);
  justify-content: center;
}

.img-adj {
  max-width: 900px;
  text-align: left;
}

img {
  height: 270px;
  border-radius: 10%;
}

p, table {
  margin-left: 2em;
  margin-right: 2em;
  font-size: 1.3em;
}

a {
  color: darkviolet;
}

.caption {
  text-align: center;
  font-style: italic;
}

.code {
  font-family: 'Roboto Mono', monospace;
  font-size: 85%;
}

td {
  padding-bottom: 1em;
}

.date {
  font-weight: bold;
  padding-right: 2em;
  width: 10vw;
}

.blank {
  margin-left: 80px;
}

